Updated '_layouts/page.html' via CloudCannon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1>{{ page.title }}</h1>
+			<h1>{{ page.title | append: ' shubby dubby}}</h1>
 			<p class="subtext">{{ page.description }}</p>
 		</div>
 	</div>
