Updated '_includes/right-image.html' via CloudCannon

--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,1 +1,9 @@
-<img src="{{ include.src }}" style="float:right; padding:20px;" />
+<figure>
+  <img src="{{ include.src }}" style="float:right; padding:20px;" />
+  <figcaption>{{ include.caption }}</figcaption>
+</figure>
+
+
+
+
+
