Updated '_includes/right-image.html' via CloudCannon

--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,5 +1,5 @@
-<figure>
-  <img src="{{ include.src }}" style="float:right; padding:20px;" />
+<figure style="float:right; padding:20px;">
+  <img src="{{ include.src }}"  />
   <figcaption>{{ include.caption }}</figcaption>
 </figure>
 
