Updated '_includes/right-image.html' via CloudCannon

--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,6 +1,6 @@
 <figure style="float:right; padding:20px;">
   <img src="{{ include.src }}"  />
-  <figcaption>{{ include.caption }}</figcaption>
+  <figcaption><center>{{ include.caption }}</center></figcaption>
 </figure>
 
 
