Updated '_includes/right-image.html' via CloudCannon

--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,6 +1,6 @@
 <figure style="float:right; padding:20px;">
   <img src="{{ include.src }}"  />
-  <figcaption style="text-align:center;font-size:9px;">{{ include.caption }}</figcaption>
+  <figcaption style="text-align:center;font-size:11px;padding:8px;color:white;background-color:black;">{{ include.caption }}</figcaption>
 </figure>
 
 
