Updated '_includes/right-image.html' via CloudCannon

--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,6 +1,6 @@
-<figure style="float:right; padding:10px;">
+<figure style="float:right; padding:10px;border: 1px solid black;">
   <img src="{{ include.src }}"  />
-  <figcaption style="text-align:center;font-size:11px;padding:8px;border: 1px solid black;">{{ include.caption }}</figcaption>
+  <figcaption style="text-align:center;font-size:11px;padding:8px;">{{ include.caption }}</figcaption>
 </figure>
 
 
