fouracross from staff

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -6,7 +6,7 @@
 @import "elements";
 @import "landing-page";
 @import "layout";
-@import "staff";
+@import "fouracross";
 @import "contact";
 @import "blog";
 @import "forms";
