--- a/_includes/left-image.html
+++ b/_includes/left-image.html
@@ -1,1 +1,1 @@
-<figure style="float:left; padding:10px;border: 1px solid black;"><img src="{{ include.src }}"  /><figcaption style="text-align:center;font-size:11px;padding:8px;">{{ include.caption }}</figcaption></figure>
+<figure style="float:left; padding:10px;border: 1px solid black;"><img src="{{ include.src }}"></img><figcaption style="text-align:center;font-size:11px;padding:8px;">{{ include.caption }}</figcaption></figure>
