Updated '_sass/layout.scss' via CloudCannon

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -219,3 +219,8 @@ blockquote:before {
 .cms-editor-active .editor-link {
 	display: block;
 }
+.right-image{
+    float: right;
+    margin: 0 0 30px 30px;
+    
+}
