--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,1 +1,1 @@
-<figure style="float:right; padding:10px;border: 1px solid black;max-width: {{ include.width }}"><img src="{{ include.src }}" width="{{ include.width }}"><figcaption style="text-align:center;font-size:11px;padding:8px;">{{ include.caption }}</figcaption></figure>
+<figure class="float-right"><img src="{{ include.src }}" width="{{ include.width }}" alt="{{ include.caption }}"  /><figcaption class="fig-caption">{{ include.caption }}</figcaption></figure>
