--- a/_includes/right-image.html
+++ b/_includes/right-image.html
@@ -1,1 +1,1 @@
-<figure class="float-right"><img src="{{ include.src }}" width="{{ include.width }}" alt="{{ include.caption }}"  /><figcaption class="fig-caption">{{ include.caption }}</figcaption></figure>
+<figure class="float-right"><img src="{{ include.src }}" width="{{ include.width }}" alt="{{ include.caption }}"></img><figcaption class="fig-caption">{{ include.caption }}</figcaption></figure>
