Updated '_includes/left-image.html' via CloudCannon

--- a/_includes/left-image.html
+++ b/_includes/left-image.html
@@ -1,1 +1,1 @@
-<figure style="float:left; padding:10px;border: 1px solid black;"><img src="{{ include.src }}"></img><figcaption style="text-align:center;font-size:11px;padding:8px;">{{ include.caption }}</figcaption></figure>
+<figure class="float-left"><img src="{{ include.src }}" width="{{ include.width }}" alt="{{ include.caption }}"  /><figcaption class="fig-caption">{{ include.caption }}</figcaption></figure>
