Updated '_sass/layout.scss' via CloudCannon

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -230,6 +230,11 @@ figure.float-right {
     margin: 0 0 30px 30px;
 }
 
+figure.float-left {
+    float: left;
+    margin: 0 0 30px 30px;
+}
+
 figcaption {
     text-align: center;
     font-size: 14px;
